[package]
name = "param-opt"
version = "0.1.0"
edition = "2021"
description = "Parameter optimization"
license = "MIT"
repository = "https://github.com/Banyc/param-opt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
tera = "1"
toml = "0.8"
