[package]
name = "param-opt"
version = "0.2.0"
edition = "2021"
description = "Parameter optimization"
license = "MIT"
repository = "https://github.com/Banyc/param-opt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.51"

[dev-dependencies]
anyhow = "1"
tera = "1"
toml = "0.8"
